// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio component Should match the snapshot 1`] = `
<div
  className="FieldGroup-sc-18uoi37-0 exZTLD"
>
  
  <textarea
    className="Textarea__Textfield-jsoe8i-0 cKZWpX"
    id=""
    maxLength={300}
    name=""
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder=""
    value=""
  />
  <div
    className="Textarea__Infos-jsoe8i-1 iTTTOR"
  >
    
    <span
      className="Textarea__Countdown-jsoe8i-2 eqyMRU"
    >
      300
    </span>
  </div>
</div>
`;

exports[`Radio component with a label should match the snapshot 1`] = `
<div
  className="FieldGroup-sc-18uoi37-0 exZTLD"
>
  <label
    className="Label-sc-1ny5bqy-0 bvIVUH"
    htmlFor="textarea"
  >
     
    Text label
     
  </label>
  <textarea
    className="Textarea__Textfield-jsoe8i-0 cKZWpX"
    id="textarea"
    maxLength={300}
    name=""
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder=""
    value=""
  />
  <div
    className="Textarea__Infos-jsoe8i-1 iTTTOR"
  >
    
    <span
      className="Textarea__Countdown-jsoe8i-2 eqyMRU"
    >
      300
    </span>
  </div>
</div>
`;

exports[`Radio component with an error message should match the snapshot 1`] = `
<div
  className="FieldGroup-sc-18uoi37-0 exZTLD"
>
  
  <textarea
    className="Textarea__Textfield-jsoe8i-0 buSVtw"
    id=""
    maxLength={300}
    name=""
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder=""
    value=""
  />
  <div
    className="Textarea__Infos-jsoe8i-1 iTTTOR"
  >
    <div
      className="ErrorMessage-sc-19jcdrm-0 iRUhLB"
    >
      Error message
    </div>
    <span
      className="Textarea__Countdown-jsoe8i-2 eqyMRU"
    >
      300
    </span>
  </div>
</div>
`;
